name:             maze
version:          1.0.0.0
author:           Cerek Hillen
maintainer:       crockeo@gmail.com
synopsis:         An expedition into the State monad for use in videogames.
license-file:     LICENSE
build-type:       Simple
cabal-version: >= 1.10

executable maze
  hs-source-dirs: src/
  main-is: Main.hs

  build-depends: base == 4.6.*
               , mtl
  
  default-language: Haskell2010
