name:             maze
version:          1.0.0.0
author:           Cerek Hillen
maintainer:       crockeo@gmail.com
synopsis:         An expedition into the State monad for use in videogames.
license-file:     LICENSE
build-type:       Simple
cabal-version: >= 1.10

executable maze
  ghc-options: -threaded

  hs-source-dirs: src/

  main-is: Main.hs

  build-depends: base == 4.6.*
               , mtl  == 5.1.*
               , vty  == 2.2.*
  
  default-language: Haskell2010
